# his-file-report

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
canvas/: body.py  draw_body.py  header.py
generator/: his.py
models/: database.py
reportgen/: cli.py
reportgen/models/: diagnostic.py  patient.py
reportgen/reports/: his.py
reportgen/settings/: settings.toml
reportgen/utils/: custom_types.py  files.py  patient.py
src/canvas/: report.py
src/utils/: coordinates.py
test/: test_main.py
utils/: age.py  constants.py  coordinates.py  patients.py
