[tool.poetry]
name = "his-format-document"
version = "0.1.0"
description = ""
authors = ["Patrick <pvilchez794@gmail.com>"]
readme = "README.md"
packages = [{include = "his_format_document"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pypdf = "^3.12.0"
reportlab = "^4.0.4"
rich = "^13.4.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
