[tool.poetry]
name = "reportgen"
version = "0.1.0"
description = "CLI app to auto fill HIS format documents."
authors = ["Patrick <pvilchez794@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pypdf = "^3.12.0"
reportlab = "^4.0.4"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
isort = "^5.12.0"
black = "^23.3.0"

[tool.poetry.scripts]
reportgen = "reportgen.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
