[tool.poetry]
name = "reportgen"
version = "0.2.0"
description = "CLI app to auto fill HIS format documents."
authors = ["Patrick <pvilchez794@gmail.com>"]
readme = "README.md"
packages = [{include = "reportgen"}]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pypdf = "^3.12.0"
reportlab = "^4.0.4"
rich = "^13.4.2"
tomlkit = "^0.11.8"
tzdata = "^2023.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.3.0"
pytest = "^7.4.0"
ruff = "^0.0.278"
pytest-cov = "^4.1.0"


[tool.poetry.scripts]
reportgen = "reportgen.cli:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    # "UP",  # alert you when better syntax is available in your python version
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

target-version = "py311"

[tool.black]
line-length = 79
